--- a/reports/report_base.Rmd
+++ b/reports/report_base.Rmd
@@ -143,32 +143,45 @@ jpgsnapshot(paste0("figures/", studyidchar, "-", stratachar, "_IFRplot.jpg"),
 plot(main_plotObj)
 ```
 
+##### Strata IFR
 \pagebreak
 ```{r, results='asis', fig.width=8, fig.height=6}
 ifrs %>% 
-  dplyr::mutate_if(is.numeric, round, 2) %>% 
+  dplyr::mutate_if(is.numeric, round, 4) %>% 
   knitr::kable(.)
 
 ```
 
 ##### Overall IFR
 ```{r, results='asis'}
-# population denom
-demog <- modout$inputs$IFRmodel$demog %>% 
-  dplyr::rename(param = Strata)
-demog <- demog %>% 
-  dplyr::left_join(., dictkey)
-
-gIFR <- sum(ifrs$median * demog$popN/sum(demog$popN))
-
-tibble::tibble("Overall IFR" = sprintf("%1.2f%%", 100*gIFR)) %>% 
+# overall
+COVIDCurve::get_globalIFR_cred_intervals(IFRmodel_inf = modout, 
+                                         whichrung = "rung1", 
+                                         by_chain = FALSE) %>% 
+  dplyr::mutate_if(is.numeric, round, 4) %>% 
   knitr::kable(.)
+
+# by chain
+COVIDCurve::get_globalIFR_cred_intervals(IFRmodel_inf = modout, 
+                                         whichrung = "rung1", 
+                                         by_chain = TRUE) %>% 
+  dplyr::mutate_if(is.numeric, round, 4) %>% 
+  knitr::kable(.)
+
+
+
 
 ```
 
 \pagebreak
 #### Seroprevalence Observed vs. Inferred True Prev
 ```{r}
+# population denom
+demog <- modout$inputs$IFRmodel$demog %>% 
+  dplyr::rename(param = Strata)
+demog <- demog %>% 
+  dplyr::left_join(., dictkey)
+
 seropnts <- COVIDCurve::draw_posterior_sero_curves(IFRmodel_inf = modout,
                                                    dwnsmpl = 1e2,
                                                    by_chain = F)
@@ -354,7 +367,7 @@ addparams <- dplyr::bind_rows(knots, ypos, nes)
 ```
 ```{r, results='asis', fig.width=8, fig.height=6}
 addparams %>% 
-  dplyr::mutate_if(is.numeric, round, 2) %>% 
+  dplyr::mutate_if(is.numeric, round, 4) %>% 
   knitr::kable(.)
 
 ```
